# HackDuke25

./: .gitignore  README.md  STT_init.py  funASR.py  just_trying.ipynb  main.py  persona.py  pyproject.toml  recorded_1745115809_39s.pcm  stt_engine.py  stt_engine_new.py  test.py  tts_docs.md  tts_engine.py  tts_example.py
Program/: BRAIN_langchain.py  BRAIN_llm_init.py  BRAIN_organizer.py  STT_audio_listener.py  STT_config.py  STT_init.py  STT_save_func.py  STT_transcribe_func.py  STT_transcript_processor.py  TTS_speaker.py  just_trying.ipynb  story.txt  tts_engine.py
backup/: STT_audio_listener.py  STT_config.py  STT_save_func.py  STT_silence_func.py  just_trying.ipynb
